<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expandable="false"
    app:expanded="false"
    app:showNavButtonAsBack="true"
    app:title="Widget settings">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="96dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_preview_section" />

        <FrameLayout
            android:id="@+id/preview_container"
            android:layout_width="match_parent"
            android:layout_height="242dp"
            android:background="@drawable/config_preview_bg"
            android:clipToOutline="true">

            <ImageView
                android:id="@+id/preview_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <FrameLayout
                android:id="@+id/preview_widget"
                android:layout_width="200dp"
                android:layout_height="126dp"
                android:layout_gravity="center" />

        </FrameLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tint_section" />

        <dev.oneuiproject.oneui.widget.RoundedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.CardItemView
                android:id="@+id/color_picker_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableEnd="@drawable/accent_dot"
                app:showTopDivider="false"
                app:summary="@string/tint_summary_placeholder"
                app:title="@string/tint_colour"
                app:userUpdatableSummary="true" />

            <dev.oneuiproject.oneui.widget.SwitchItemView
                android:id="@+id/dark_tint_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:showTopDivider="true"
                app:summaryOff="@string/light_tint_summary"
                app:summaryOn="@string/dark_tint_summary"
                app:title="@string/dark_tint" />

        </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

        <LinearLayout
            android:id="@+id/universal_text_options_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Text" />

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/universal_text_scale" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text size" app:summary="100%" app:showTopDivider="false" />
                <androidx.appcompat.widget.SeslSeekBar android:id="@+id/universal_text_scale_slider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="18dp" android:max="100" android:progress="50" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/universal_text_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text colour" app:summary="#FFFFFFFF" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/universal_text_alignment" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text alignment" app:summary="Centre" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>
        </LinearLayout>

        <LinearLayout android:id="@+id/storage_options_section" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
            <dev.oneuiproject.oneui.widget.Separator android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Storage" />
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="?android:colorBackground" android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/storage_compact_metric" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="1-row progress bar" app:summary="Storage" app:showTopDivider="false" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/storage_storage_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Storage colour" app:summary="#08B0CE" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/storage_data_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Data usage colour" app:summary="#5BD686" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/storage_memory_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Memory colour" app:summary="#1D79ED" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/calendar_options_section" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:visibility="gone">
            <dev.oneuiproject.oneui.widget.Separator android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Calendar" />
            <dev.oneuiproject.oneui.widget.RoundedLinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:background="?android:colorBackground" android:orientation="vertical">
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/calendar_accent_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Today colour" app:summary="#08B0CE" app:showTopDivider="false" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clock_options_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Clock" />

            <dev.oneuiproject.oneui.widget.RoundedLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:orientation="vertical">

                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_show_date" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Show date" app:showTopDivider="false" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_show_day" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Show day of week" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_date_above" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Date above time" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_show_phone_battery" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Show phone battery" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_background" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Show background" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_time_format" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Time format" app:summary="Use system setting" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_show_am_pm" android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="gone" app:title="Show AM/PM" />
                <dev.oneuiproject.oneui.widget.SwitchItemView android:id="@+id/clock_show_seconds" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Show seconds" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_alignment" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text alignment" app:summary="Centre" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_tap_action" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Tap action" app:summary="Open Clock" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_font" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Clock font" app:summary="System default" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_text_scale" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text size" app:summary="100%" />
                <androidx.appcompat.widget.SeslSeekBar android:id="@+id/clock_text_scale_slider" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="18dp" android:max="100" android:progress="50" />
                <dev.oneuiproject.oneui.widget.CardItemView android:id="@+id/clock_text_colour" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="Text colour" app:summary="#FFFFFFFF" />
            </dev.oneuiproject.oneui.widget.RoundedLinearLayout>
        </LinearLayout>

        <dev.oneuiproject.oneui.widget.Separator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opacity_section" />

        <dev.oneuiproject.oneui.widget.RoundedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="18dp"
                android:paddingEnd="12dp"
                android:paddingTop="16dp"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/opacity_presets"
                    android:textColor="?android:textColorPrimary"
                    android:textFontWeight="400"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/preset_default"
                        style="@style/WidgetPresetButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/default_preset" />

                    <TextView
                        android:id="@+id/preset_glass"
                        style="@style/WidgetPresetButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/glass_preset" />

                    <TextView
                        android:id="@+id/preset_light"
                        style="@style/WidgetPresetButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/light_preset" />

                    <TextView
                        android:id="@+id/preset_medium"
                        style="@style/WidgetPresetButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/medium_preset" />

                    <TextView
                        android:id="@+id/preset_solid"
                        style="@style/WidgetPresetButton"
                        android:layout_width="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:minWidth="0dp"
                        android:paddingHorizontal="4dp"
                        android:text="@string/solid_preset" />

                </LinearLayout>
            </LinearLayout>

        </dev.oneuiproject.oneui.widget.RoundedLinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/config_button_bar_bg"
        android:elevation="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:paddingHorizontal="36dp"
            android:paddingVertical="16dp"
            android:text="Cancel"
            android:textColor="?android:textColorPrimary"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <View android:layout_width="1dp" android:layout_height="20dp" android:background="@color/oneui_divider" />

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:paddingHorizontal="36dp"
            android:paddingVertical="16dp"
            android:text="Save"
            android:textColor="?android:textColorPrimary"
            android:textFontWeight="600"
            android:textSize="16sp" />
    </LinearLayout>
    </FrameLayout>

</dev.oneuiproject.oneui.layout.ToolbarLayout>
